--- a/index.html
+++ b/index.html
@@ -1,29 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Document Download Hub</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document Download Hub - easyfiles.icu</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <h1>📚 Document Download Hub</h1>
+  <header>
+    <h1>📚 Document Download Hub</h1>
+    <p class="site-url">easyfiles.icu</p>
+  </header>
 
-  <section>
-    <h2>Computer Networks</h2>
-    <ul>
-      <li><a href="docs/Computer Networks (All In One).pdf" download>Computer Networks (All In One) (PDF)</a></li>
-      <li><a href="docs/Computer Networks(AIO).docx" download>Computer Networks(All In One) (DOCX)</a></li>
-    </ul>
-  </section>
+  <main>
+    <section class="semester" id="semester-1">
+      <h2 class="semester-header" onclick="toggleSemester('semester-1')">Semester I <span class="toggle-icon">+</span>
+      </h2>
+      <div class="semester-content">
+        <!-- Add subjects here when available -->
+                  <p class="empty-message">Nothing here yet</p>
 
-  <section>
-    <h2>DWM</h2>
-    <ul>
-      <li><a href="docs/DWM (All In One).pdf" download>DWM (All In One) (PDF)</a></li>
-      <li><a href="docs/DWM (All In One).docx" download>DWM (All In One) (DOCS)</a></li>
-    </ul>
-  </section>
+      </div>
+    </section>
 
-  <!-- Repeat for other 3–5 subjects -->
+    <section class="semester" id="semester-2">
+      <h2 class="semester-header" onclick="toggleSemester('semester-2')">Semester II <span class="toggle-icon">+</span>
+      </h2>
+      <div class="semester-content">
+        <!-- Add subjects here when available -->
+                  <p class="empty-message">Nothing here yet</p>
+
+      </div>
+    </section>
+
+    <section class="semester" id="semester-3">
+      <h2 class="semester-header" onclick="toggleSemester('semester-3')">Semester III <span class="toggle-icon">+</span>
+      </h2>
+      <div class="semester-content">
+        <!-- Add subjects here when available -->
+                  <p class="empty-message">Nothing here yet</p>
+
+      </div>
+    </section>
+
+    <section class="semester" id="semester-4">
+      <h2 class="semester-header" onclick="toggleSemester('semester-4')">Semester IV <span class="toggle-icon">+</span>
+      </h2>
+      <div class="semester-content">
+        <!-- Add subjects here when available -->
+                  <p class="empty-message">Nothing here yet</p>
+
+      </div>
+    </section>
+
+    <section class="semester" id="semester-5">
+      <h2 class="semester-header" onclick="toggleSemester('semester-5')">Semester V <span class="toggle-icon">+</span>
+      </h2>
+
+
+      <div class="semester-content">
+
+
+        <div class="subject">
+          <h3>Computer Networks</h3>
+          <ul class="download-links">
+            <li><a href="docs/Sem 5/Computer Networks/All In One/Computer Networks (All In One).pdf" download>Computer
+                Networks (All In One) (PDF)</a></li>
+            <li><a href="docs/Sem 5/Computer Networks/All In One/Computer Networks(AIO).docx" download>Computer Networks
+                (All In One) (DOCX)</a></li>
+          </ul>
+        </div>
+
+        <div class="subject">
+          <h3>Data Warehousing and Mining (DWM)</h3>
+          <ul class="download-links">
+            <li><a href="docs/Sem 5/Data Warehousing and Mining/All In One/DWM (All In One).pdf" download>DWM (All In
+                One) (PDF)</a></li>
+            <li><a href="docs/Sem 5/Data Warehousing and Mining/All In One/DWM (All In One).docx" download>DWM (All In
+                One) (DOCX)</a></li>
+          </ul>
+        </div>
+
+        <div class="subject">
+          <h3>Deep Learning (Very Deep)</h3>
+          <ul class="download-links">
+            <li><a href="" download>Deep Learning (All In One) (PDF)</a></li>
+            <li><a href="" download>Deep Learning (All In One) (DOCX)</a></li>
+          </ul>
+        </div>
+
+        <div class="subject">
+          <h3>Linux Laboratory</h3>
+          <ul class="download-links">
+            <li><a href="docs/Sem 5/Linux Laboratory/All In One/LinuxLab (All In One).pdf" download>Linux Laboratory
+                (All In One) (PDF)</a></li>
+            <li><a href="docs/Sem 5/Linux Laboratory/All In One/LinuxLab (AIO).docx" download>Linux Laboratory
+                (DOCX)</a></li>
+          </ul>
+        </div>
+
+        <div class="subject">
+          <h3>COA</h3>
+          <ul class="download-links">
+            <li><a href=" " download>COA (All In One) (PDF)</a></li>
+            <li><a href=" " download>COA (All In One) (DOCX)</a></li>
+          </ul>
+        </div>
+
+        <div class="subject">
+          <h3>Compiler Design</h3>
+          <ul class="download-links">
+            <li><a href="docs/Sem 5/Compiler Design/All In One/Compiler Design (All In One).pdf" download>Compiler
+                Design (All In One) (PDF)</a></li>
+            <li><a href="docs/Sem 5/Compiler Design/All In One/Compiler Design (All In One).docx" download>Compiler
+                Design (All In One) (DOCX)</a></li>
+          </ul>
+        </div>
+
+
+
+      </div>
+    </section>
+
+    <section class="semester" id="semester-6">
+      <h2 class="semester-header" onclick="toggleSemester('semester-6')">Semester VI <span class="toggle-icon">+</span>
+      </h2>
+      <div class="semester-content">
+        <!-- Add subjects here when available -->
+                  <p class="empty-message">Nothing here yet</p>
+
+      </div>
+    </section>
+
+    <section class="semester" id="semester-7">
+      <h2 class="semester-header" onclick="toggleSemester('semester-7')">Semester VII <span class="toggle-icon">+</span>
+      </h2>
+      <div class="semester-content">
+        <!-- Add subjects here when available -->
+                  <p class="empty-message">Nothing here yet</p>
+
+      </div>
+    </section>
+
+    <section class="semester" id="semester-8">
+      <h2 class="semester-header" onclick="toggleSemester('semester-8')">Semester VIII <span
+          class="toggle-icon">+</span></h2>
+      <div class="semester-content">
+        <!-- Add subjects here when available -->
+         <p class="empty-message">Nothing here yet</p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 easyfiles.icu - Document Download Hub</p>
+  </footer>
+
+  <script> /*
+    function toggleSemester(semesterId) {
+      const semester = document.getElementById(semesterId);
+      const content = semester.querySelector('.semester-content');
+      const icon = semester.querySelector('.toggle-icon');
+
+      semester.classList.toggle('expanded');
+      icon.textContent = semester.classList.contains('expanded') ? '-' : '+';
+    } */
+  </script>
+
+  <script>
+    function toggleSemester(semesterId) {
+      const semester = document.getElementById(semesterId);
+      const content = semester.querySelector('.semester-content');
+      const icon = semester.querySelector('.toggle-icon');
+      
+      if (semester.classList.contains('expanded')) {
+        content.style.maxHeight = '0px';
+        semester.classList.remove('expanded');
+        icon.textContent = '+';
+      } else {
+        content.style.maxHeight = content.scrollHeight + 'px';
+        semester.classList.add('expanded');
+        icon.textContent = '-';
+      }
+    }
+
+  </script>
 </body>
+
 </html>
