--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </h2>
       <div class="semester-content">
         <!-- Add subjects here when available -->
-                  <p class="empty-message">Nothing here yet</p>
+        <p class="empty-message">Nothing here yet</p>
 
       </div>
     </section>
@@ -31,7 +31,7 @@
       </h2>
       <div class="semester-content">
         <!-- Add subjects here when available -->
-                  <p class="empty-message">Nothing here yet</p>
+        <p class="empty-message">Nothing here yet</p>
 
       </div>
     </section>
@@ -41,7 +41,7 @@
       </h2>
       <div class="semester-content">
         <!-- Add subjects here when available -->
-                  <p class="empty-message">Nothing here yet</p>
+        <p class="empty-message">Nothing here yet</p>
 
       </div>
     </section>
@@ -51,7 +51,7 @@
       </h2>
       <div class="semester-content">
         <!-- Add subjects here when available -->
-                  <p class="empty-message">Nothing here yet</p>
+        <p class="empty-message">Nothing here yet</p>
 
       </div>
     </section>
@@ -64,60 +64,140 @@
       <div class="semester-content">
 
 
+
+
+
+
+
         <div class="subject">
-          <h3>Computer Networks</h3>
-          <ul class="download-links">
-            <li><a href="docs/Sem 5/Computer Networks/All In One/Computer Networks (All In One).pdf" download>Computer
-                Networks (All In One) (PDF)</a></li>
-            <li><a href="docs/Sem 5/Computer Networks/All In One/Computer Networks(AIO).docx" download>Computer Networks
-                (All In One) (DOCX)</a></li>
-          </ul>
+
+          <h3 class="subject-header" onclick="toggleSubject('cn-subject')">Computer Networks <span
+              class="subject-toggle">+</span></h3>
+
+          <div class="subject-content" id="cn-subject">
+
+            <div class="subject-section">
+              <h4>All In One</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/Computer Networks/All In One/Computer Networks (All In One).pdf"
+                    download>Computer Networks (All In One) (PDF)</a></li>
+                <li><a href="docs/Sem 5/Computer Networks/All In One/Computer Networks(AIO).docx" download>Computer
+                    Networks (All In One) (DOCX)</a></li>
+              </ul>
+            </div>
+
+
+            <div class="subject-section">
+              <h4>Assignments</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/Computer Networks/Assignments/Assignment 1.docx" download>Assignment 1</a></li>
+                <li><a href="docs/Sem 5/Computer Networks/Assignments/Assignment 1 PR.docx" download>Assignment 1
+                    (PR)</a></li>
+              </ul>
+            </div>
+
+
+          </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+        <div class="subject">
+          <h3 class="subject-header" onclick="toggleSubject('dwm-subject')">Data Warehousing and Mining (DWM) <span
+              class="subject-toggle">+</span></h3>
+          <div class="subject-content" id="dwm-subject">
+            <div class="subject-section">
+              <h4>All In One</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/Data Warehousing and Mining/All In One/DWM (All In One).pdf" download>DWM (All
+                    In One) (PDF)</a></li>
+                <li><a href="docs/Sem 5/Data Warehousing and Mining/All In One/DWM (All In One).docx" download>DWM (All
+                    In One) (DOCX)</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
 
         <div class="subject">
-          <h3>Data Warehousing and Mining (DWM)</h3>
-          <ul class="download-links">
-            <li><a href="docs/Sem 5/Data Warehousing and Mining/All In One/DWM (All In One).pdf" download>DWM (All In
-                One) (PDF)</a></li>
-            <li><a href="docs/Sem 5/Data Warehousing and Mining/All In One/DWM (All In One).docx" download>DWM (All In
-                One) (DOCX)</a></li>
-          </ul>
+          <h3 class="subject-header" onclick="toggleSubject('dl-subject')">Deep Learning (Very Deep) <span
+              class="subject-toggle">+</span></h3>
+          <div class="subject-content" id="dl-subject">
+            <div class="subject-section">
+              <h4>All In One</h4>
+              <ul class="download-links">
+                <li><a href="" download>Deep Learning (All In One) (PDF)</a></li>
+                <li><a href="" download>Deep Learning (All In One) (DOCX)</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
 
         <div class="subject">
-          <h3>Deep Learning (Very Deep)</h3>
-          <ul class="download-links">
-            <li><a href="" download>Deep Learning (All In One) (PDF)</a></li>
-            <li><a href="" download>Deep Learning (All In One) (DOCX)</a></li>
-          </ul>
+          <h3 class="subject-header" onclick="toggleSubject('linux-subject')">Linux Laboratory <span
+              class="subject-toggle">+</span></h3>
+          <div class="subject-content" id="linux-subject">
+            <div class="subject-section">
+              <h4>All In One</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/Linux Laboratory/All In One/LinuxLab (All In One).pdf" download>Linux Laboratory
+                    (All In One) (PDF)</a></li>
+                <li><a href="docs/Sem 5/Linux Laboratory/All In One/LinuxLab (AIO).docx" download>Linux Laboratory (All
+                    In One) (DOCX)</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
 
         <div class="subject">
-          <h3>Linux Laboratory</h3>
-          <ul class="download-links">
-            <li><a href="docs/Sem 5/Linux Laboratory/All In One/LinuxLab (All In One).pdf" download>Linux Laboratory
-                (All In One) (PDF)</a></li>
-            <li><a href="docs/Sem 5/Linux Laboratory/All In One/LinuxLab (AIO).docx" download>Linux Laboratory
-                (DOCX)</a></li>
-          </ul>
+          <h3 class="subject-header" onclick="toggleSubject('coa-subject')">COA <span class="subject-toggle">+</span>
+          </h3>
+          <div class="subject-content" id="coa-subject">
+            <div class="subject-section">
+              <h4>All In One</h4>
+              <ul class="download-links">
+                <li><a href=" " download>COA (All In One) (PDF)</a></li>
+                <li><a href=" " download>COA (All In One) (DOCX)</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
 
         <div class="subject">
-          <h3>COA</h3>
-          <ul class="download-links">
-            <li><a href=" " download>COA (All In One) (PDF)</a></li>
-            <li><a href=" " download>COA (All In One) (DOCX)</a></li>
-          </ul>
+          <h3 class="subject-header" onclick="toggleSubject('cd-subject')">Compiler Design <span
+              class="subject-toggle">+</span></h3>
+          <div class="subject-content" id="cd-subject">
+            <div class="subject-section">
+              <h4>All In One</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/Compiler Design/All In One/Compiler Design (All In One).pdf" download>Compiler
+                    Design (All In One) (PDF)</a></li>
+                <li><a href="docs/Sem 5/Compiler Design/All In One/Compiler Design (All In One).docx" download>Compiler
+                    Design (All In One) (DOCX)</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
 
         <div class="subject">
-          <h3>Compiler Design</h3>
-          <ul class="download-links">
-            <li><a href="docs/Sem 5/Compiler Design/All In One/Compiler Design (All In One).pdf" download>Compiler
-                Design (All In One) (PDF)</a></li>
-            <li><a href="docs/Sem 5/Compiler Design/All In One/Compiler Design (All In One).docx" download>Compiler
-                Design (All In One) (DOCX)</a></li>
-          </ul>
+          <h3 class="subject-header" onclick="toggleSubject('')">Unknown Subject <span
+              class="subject-toggle">+</span></h3>
+          <div class="subject-content" id="cd-subject">
+            <div class="subject-section">
+              <h4>All In One</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/Compiler Design/All In One/Compiler Design (All In One).pdf" download>Unknown Subject</a></li>
+                <li><a href="docs/Sem 5/Compiler Design/All In One/Compiler Design (All In One).docx" download>Unknown Subject
+                   </a></li>
+              </ul>
+            </div>
+          </div>
         </div>
 
 
@@ -130,7 +210,7 @@
       </h2>
       <div class="semester-content">
         <!-- Add subjects here when available -->
-                  <p class="empty-message">Nothing here yet</p>
+        <p class="empty-message">Nothing here yet</p>
 
       </div>
     </section>
@@ -140,7 +220,7 @@
       </h2>
       <div class="semester-content">
         <!-- Add subjects here when available -->
-                  <p class="empty-message">Nothing here yet</p>
+        <p class="empty-message">Nothing here yet</p>
 
       </div>
     </section>
@@ -150,7 +230,7 @@
           class="toggle-icon">+</span></h2>
       <div class="semester-content">
         <!-- Add subjects here when available -->
-         <p class="empty-message">Nothing here yet</p>
+        <p class="empty-message">Nothing here yet</p>
       </div>
     </section>
   </main>
@@ -159,34 +239,11 @@
     <p>&copy; 2024 easyfiles.icu - Document Download Hub</p>
   </footer>
 
-  <script> /*
-    function toggleSemester(semesterId) {
-      const semester = document.getElementById(semesterId);
-      const content = semester.querySelector('.semester-content');
-      const icon = semester.querySelector('.toggle-icon');
 
-      semester.classList.toggle('expanded');
-      icon.textContent = semester.classList.contains('expanded') ? '-' : '+';
-    } */
-  </script>
+<script src="script.js"></script>
 
   <script>
-    function toggleSemester(semesterId) {
-      const semester = document.getElementById(semesterId);
-      const content = semester.querySelector('.semester-content');
-      const icon = semester.querySelector('.toggle-icon');
-      
-      if (semester.classList.contains('expanded')) {
-        content.style.maxHeight = '0px';
-        semester.classList.remove('expanded');
-        icon.textContent = '+';
-      } else {
-        content.style.maxHeight = content.scrollHeight + 'px';
-        semester.classList.add('expanded');
-        icon.textContent = '-';
-      }
-    }
-
+    
   </script>
 </body>
 
