Added some changes

--- a/index.html
+++ b/index.html
@@ -36,22 +36,77 @@
       </div>
     </section>
 
+
+
+
+
+
+
+
+
+
+
     <section class="semester" id="semester-3">
       <h2 class="semester-header" onclick="toggleSemester('semester-3')">Semester III <span class="toggle-icon">+</span>
       </h2>
       <div class="semester-content">
-        <!-- Add subjects here when available -->
-        <p class="empty-message">Nothing here yet</p>
+
+
+        <div class="subject">
+
+          <h3 class="subject-header" onclick="toggleSubject('')">MST & EST Papers <span
+              class="subject-toggle">+</span></h3>
+
+          <div class="subject-content" id="">
+
+            <div class="subject-section">
+              <h4>Mid Semester Test Papers</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 3/MST & EST Papers/MST/Data Structure/data_structure_mst_one.jpeg"
+                    download>Data Structure</a></li>
+                <li><a href="docs/Sem 3/MST & EST Papers/MST/Discrete Mathematics/discrete_mathematics_mst_one.jpeg" download>Discrete Mathematics</a></li>
+              </ul>
+            </div>
+
+
+            <div class="subject-section">
+              <h4>End Semester Test Papers</h4>
+              <ul class="download-links">
+                <li><a href=" " download>Subject 1</a></li>
+                <li><a href=" " download>Subject 2 </a></li>
+              </ul>
+            </div>
+
+
+          </div>
+        </div>
+
+
+
+
+
+
+
 
       </div>
     </section>
+
+
+
 
     <section class="semester" id="semester-4">
       <h2 class="semester-header" onclick="toggleSemester('semester-4')">Semester IV <span class="toggle-icon">+</span>
       </h2>
       <div class="semester-content">
+
+
+
         <!-- Add subjects here when available -->
         <p class="empty-message">Nothing here yet</p>
+
+
+
+
 
       </div>
     </section>
@@ -186,15 +241,17 @@
         </div>
 
         <div class="subject">
-          <h3 class="subject-header" onclick="toggleSubject('')">Unknown Subject <span
-              class="subject-toggle">+</span></h3>
+          <h3 class="subject-header" onclick="toggleSubject('')">Unknown Subject <span class="subject-toggle">+</span>
+          </h3>
           <div class="subject-content" id="cd-subject">
             <div class="subject-section">
               <h4>All In One</h4>
               <ul class="download-links">
-                <li><a href="docs/Sem 5/Compiler Design/All In One/Compiler Design (All In One).pdf" download>Unknown Subject</a></li>
-                <li><a href="docs/Sem 5/Compiler Design/All In One/Compiler Design (All In One).docx" download>Unknown Subject
-                   </a></li>
+                <li><a href="docs/Sem 5/Compiler Design/All In One/Compiler Design (All In One).pdf" download>Unknown
+                    Subject</a></li>
+                <li><a href="docs/Sem 5/Compiler Design/All In One/Compiler Design (All In One).docx" download>Unknown
+                    Subject
+                  </a></li>
               </ul>
             </div>
           </div>
@@ -240,10 +297,10 @@
   </footer>
 
 
-<script src="script.js"></script>
+  <script src="script.js"></script>
 
   <script>
-    
+
   </script>
 </body>
 
