All In One - Document Share

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
         <div class="subject">
 
-          <h3 class="subject-header" onclick="toggleSubject('')">MST & EST Papers <span
+          <h3 class="subject-header" onclick="toggleSubject('mst-est-papers')">MST & EST Papers <span
               class="subject-toggle">+</span></h3>
 
-          <div class="subject-content" id="">
+          <div class="subject-content" id="mst-est-papers">
 
             <div class="subject-section">
               <h4>Mid Semester Test Papers</h4>
@@ -68,20 +68,53 @@
               </ul>
             </div>
 
-
-            <div class="subject-section">
-              <h4>End Semester Test Papers</h4>
-              <ul class="download-links">
-                <li><a href=" " download>Subject 1</a></li>
-                <li><a href=" " download>Subject 2 </a></li>
-              </ul>
-            </div>
-
-
           </div>
+
+
         </div>
 
 
+         <div class="subject">
+
+          <h3 class="subject-header" onclick="toggleSubject('mst-est-papers')">MST & EST Papers <span
+              class="subject-toggle">+</span></h3>
+
+          <div class="subject-content" id="mst-est-papers">
+
+            <div class="subject-section">
+              <h4>Mid Semester Test Papers</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 3/MST & EST Papers/MST/Data Structure/data_structure_mst_one.jpeg"
+                    download>Data Structure</a></li>
+                <li><a href="docs/Sem 3/MST & EST Papers/MST/Discrete Mathematics/discrete_mathematics_mst_one.jpeg" download>Discrete Mathematics</a></li>
+              </ul>
+            </div>
+
+          </div>
+
+
+        </div>
+
+         <div class="subject">
+
+          <h3 class="subject-header" onclick="toggleSubject('mst-est-papers')">MST & EST Papers <span
+              class="subject-toggle">+</span></h3>
+
+          <div class="subject-content" id="mst-est-papers">
+
+            <div class="subject-section">
+              <h4>Mid Semester Test Papers</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 3/MST & EST Papers/MST/Data Structure/data_structure_mst_one.jpeg"
+                    download>Data Structure</a></li>
+                <li><a href="docs/Sem 3/MST & EST Papers/MST/Discrete Mathematics/discrete_mathematics_mst_one.jpeg" download>Discrete Mathematics</a></li>
+              </ul>
+            </div>
+
+          </div>
+
+
+        </div>
 
 
 
@@ -299,9 +332,7 @@
 
   <script src="script.js"></script>
 
-  <script>
-
-  </script>
+ 
 </body>
 
 </html>
