--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
             <div class="subject-section">
               <h4>Mid Semester Test Papers</h4>
               <ul class="download-links">
-                <li><a href="docs/Sem 3/MST & EST Papers/MST/Data Structure/data_structure_mst_one.jpeg"
-                    download>Data Structure</a></li>
-                <li><a href="docs/Sem 3/MST & EST Papers/MST/Discrete Mathematics/discrete_mathematics_mst_one.jpeg" download>Discrete Mathematics</a></li>
+                <li><a href="docs/Sem 3/MST & EST Papers/MST/Data Structure/data_structure_mst_one.jpeg" download>Data
+                    Structure</a></li>
+                <li><a href="docs/Sem 3/MST & EST Papers/MST/Discrete Mathematics/discrete_mathematics_mst_one.jpeg"
+                    download>Discrete Mathematics</a></li>
               </ul>
             </div>
 
@@ -74,7 +75,7 @@
         </div>
 
 
-         <div class="subject">
+        <div class="subject">
 
           <h3 class="subject-header" onclick="toggleSubject('mst-est-papers')">MST & EST Papers <span
               class="subject-toggle">+</span></h3>
@@ -84,9 +85,10 @@
             <div class="subject-section">
               <h4>Mid Semester Test Papers</h4>
               <ul class="download-links">
-                <li><a href="docs/Sem 3/MST & EST Papers/MST/Data Structure/data_structure_mst_one.jpeg"
-                    download>Data Structure</a></li>
-                <li><a href="docs/Sem 3/MST & EST Papers/MST/Discrete Mathematics/discrete_mathematics_mst_one.jpeg" download>Discrete Mathematics</a></li>
+                <li><a href="docs/Sem 3/MST & EST Papers/MST/Data Structure/data_structure_mst_one.jpeg" download>Data
+                    Structure</a></li>
+                <li><a href="docs/Sem 3/MST & EST Papers/MST/Discrete Mathematics/discrete_mathematics_mst_one.jpeg"
+                    download>Discrete Mathematics</a></li>
               </ul>
             </div>
 
@@ -95,7 +97,7 @@
 
         </div>
 
-         <div class="subject">
+        <div class="subject">
 
           <h3 class="subject-header" onclick="toggleSubject('mst-est-papers')">MST & EST Papers <span
               class="subject-toggle">+</span></h3>
@@ -105,9 +107,10 @@
             <div class="subject-section">
               <h4>Mid Semester Test Papers</h4>
               <ul class="download-links">
-                <li><a href="docs/Sem 3/MST & EST Papers/MST/Data Structure/data_structure_mst_one.jpeg"
-                    download>Data Structure</a></li>
-                <li><a href="docs/Sem 3/MST & EST Papers/MST/Discrete Mathematics/discrete_mathematics_mst_one.jpeg" download>Discrete Mathematics</a></li>
+                <li><a href="docs/Sem 3/MST & EST Papers/MST/Data Structure/data_structure_mst_one.jpeg" download>Data
+                    Structure</a></li>
+                <li><a href="docs/Sem 3/MST & EST Papers/MST/Discrete Mathematics/discrete_mathematics_mst_one.jpeg"
+                    download>Discrete Mathematics</a></li>
               </ul>
             </div>
 
@@ -179,8 +182,16 @@
               <h4>Assignments</h4>
               <ul class="download-links">
                 <li><a href="docs/Sem 5/Computer Networks/Assignments/Assignment 1.docx" download>Assignment 1</a></li>
-                <li><a href="docs/Sem 5/Computer Networks/Assignments/Assignment 1 PR.docx" download>Assignment 1
-                    (PR)</a></li>
+                <li><a href="docs/Sem 5/Computer Networks/Assignments/Assignment_2.docx" download>Assignment 2</a></li>
+                <li><a href="docs/Sem 5/Computer Networks/Assignments/Assignment_3.docx" download>Assignment 3</a></li>
+                <li style="color: grey;">Assignment 4 (Coming Soon)</li>
+                <li style="color: grey;">Assignment 5 (Coming Soon) </li>
+
+                <li><a href="docs/Sem 5/Computer Networks/Assignments/Assignment 1 PR.docx" download>Assignment 1 (PR)</a></li>
+                <li><a href="docs/Sem 5/Computer Networks/Assignments/Assignment 2 PR.docx" download>Assignment 2 (PR)</a></li>
+                <li style="color: grey;">Assignment 3 (PR) (Coming Soon)</li>
+                <li style="color: grey;">Assignment 4 (PR) (Coming Soon)</li>
+                <li style="color: grey;">Assignment 5 (PR) (Coming Soon)</li>
               </ul>
             </div>
 
@@ -332,7 +343,7 @@
 
   <script src="script.js"></script>
 
- 
+
 </body>
 
 </html>
