--- a/index.html
+++ b/index.html
@@ -52,50 +52,10 @@
       <div class="semester-content">
 
 
-        <div class="subject">
-
-          <h3 class="subject-header" onclick="toggleSubject('mst-est-papers')">MST & EST Papers <span
-              class="subject-toggle">+</span></h3>
-
-          <div class="subject-content" id="mst-est-papers">
-
-            <div class="subject-section">
-              <h4>Mid Semester Test Papers</h4>
-              <ul class="download-links">
-                <li><a href="docs/Sem 3/MST & EST Papers/MST/Data Structure/data_structure_mst_one.jpeg" download>Data
-                    Structure</a></li>
-                <li><a href="docs/Sem 3/MST & EST Papers/MST/Discrete Mathematics/discrete_mathematics_mst_one.jpeg"
-                    download>Discrete Mathematics</a></li>
-              </ul>
-            </div>
-
-          </div>
 
 
-        </div>
 
 
-        <div class="subject">
-
-          <h3 class="subject-header" onclick="toggleSubject('mst-est-papers')">MST & EST Papers <span
-              class="subject-toggle">+</span></h3>
-
-          <div class="subject-content" id="mst-est-papers">
-
-            <div class="subject-section">
-              <h4>Mid Semester Test Papers</h4>
-              <ul class="download-links">
-                <li><a href="docs/Sem 3/MST & EST Papers/MST/Data Structure/data_structure_mst_one.jpeg" download>Data
-                    Structure</a></li>
-                <li><a href="docs/Sem 3/MST & EST Papers/MST/Discrete Mathematics/discrete_mathematics_mst_one.jpeg"
-                    download>Discrete Mathematics</a></li>
-              </ul>
-            </div>
-
-          </div>
-
-
-        </div>
 
         <div class="subject">
 
@@ -186,26 +146,30 @@
                 <li><a href="docs/Sem 5/Computer Networks/Assignments/Assignment_3.docx" download>Assignment 3</a></li>
                 <li style="color: grey;">Assignment 4 (Coming Soon)</li>
                 <li style="color: grey;">Assignment 5 (Coming Soon) </li>
-
-                <li><a href="docs/Sem 5/Computer Networks/Assignments/Assignment 1 PR.docx" download>Assignment 1 (PR)</a></li>
-                <li><a href="docs/Sem 5/Computer Networks/Assignments/Assignment 2 PR.docx" download>Assignment 2 (PR)</a></li>
+                <h4>Practical</h4>
+                <li><a href="docs/Sem 5/Computer Networks/Assignments/Assignment 1 PR.docx" download>Assignment 1
+                    (PR)</a></li>
+                <li><a href="docs/Sem 5/Computer Networks/Assignments/Assignment 2 PR.docx" download>Assignment 2
+                    (PR)</a></li>
                 <li style="color: grey;">Assignment 3 (PR) (Coming Soon)</li>
                 <li style="color: grey;">Assignment 4 (PR) (Coming Soon)</li>
                 <li style="color: grey;">Assignment 5 (PR) (Coming Soon)</li>
               </ul>
             </div>
 
+            <div class="subject-section">
+              <h4>Syllabus</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/Computer Networks/Syllabus/syllabus.docx" download>Syllabus</a></li>
+                <li><a href="docs/Sem 5/Computer Networks/Syllabus/Practical Syllabus.docx" download>Practical
+                    Syllabus</a></li>
+              </ul>
+            </div>
+
+
 
           </div>
         </div>
-
-
-
-
-
-
-
-
 
 
         <div class="subject">
@@ -221,6 +185,30 @@
                     In One) (DOCX)</a></li>
               </ul>
             </div>
+
+            <div class="subject-section">
+              <h4>Assignments</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/Data Warehousing and Mining/Assignments/Assignment_1.docx" download>Assignment
+                    1</a></li>
+                <li style="color: grey;">Assignment 2 (Coming Soon)</li>
+                <li style="color: grey;">Assignment 3 (Coming Soon)</li>
+                <li style="color: grey;">Assignment 4 (Coming Soon)</li>
+                <li style="color: grey;">Assignment 5 (Coming Soon) </li>
+
+              </ul>
+            </div>
+
+            <div class="subject-section">
+              <h4>Syllabus</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/Data Warehousing and Mining/Syllabus/syllabus.docx" download>Syllabus</a></li>
+              </ul>
+            </div>
+
+
+
+
           </div>
         </div>
 
@@ -235,6 +223,29 @@
                 <li><a href="" download>Deep Learning (All In One) (DOCX)</a></li>
               </ul>
             </div>
+
+            <div class="subject-section">
+              <h4>Assignments</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/Deep Learning/Assignments/Assignment_1.docx" download>Assignment 1</a></li>
+                <li><a href="docs/Sem 5/Deep Learning/Assignments/Assignment_2.docx" download>Assignment 2</a></li>
+                <li style="color: grey;">Assignment 3 (Coming Soon)</li>
+                <li style="color: grey;">Assignment 4 (Coming Soon)</li>
+                <li style="color: grey;">Assignment 5 (Coming Soon) </li>
+
+              </ul>
+            </div>
+
+            <div class="subject-section">
+              <h4>Syllabus</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/Deep Learning/Syllabus/syllabus.pdf" download>Syllabus</a></li>
+              </ul>
+            </div>
+
+
+
+
           </div>
         </div>
 
@@ -251,6 +262,29 @@
                     In One) (DOCX)</a></li>
               </ul>
             </div>
+
+            <div class="subject-section">
+              <h4>Assignments</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/Linux Laboratory/Assignments/Assignment_1.docx" download>Assignment 1</a></li>
+                <li><a href="docs/Sem 5/Linux Laboratory/Assignments/Assignment_2.docx" download>Assignment 2</a></li>
+                <li><a href="docs/Sem 5/Linux Laboratory/Assignments/Assignment_3.docx" download>Assignment 3</a></li>
+                <li><a href="docs/Sem 5/Linux Laboratory/Assignments/Assignment_4.docx" download>Assignment 4</a></li>
+                <li><a href="docs/Sem 5/Linux Laboratory/Assignments/Assignment_5.docx" download>Assignment 5</a></li>
+              </ul>
+            </div>
+
+
+            <div class="subject-section">
+              <h4>Syllabus</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/Linux Laboratory/Syllabus/syllabus.docx" download>Syllabus</a></li>
+              </ul>
+            </div>
+
+
+
+
           </div>
         </div>
 
@@ -265,6 +299,28 @@
                 <li><a href=" " download>COA (All In One) (DOCX)</a></li>
               </ul>
             </div>
+
+            <div class="subject-section">
+              <h4>Assignments</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/COA/Assignments/Assignment_1.docx" download>Assignment 1</a></li>
+                <li><a href="docs/Sem 5/COA/Assignments/Assignment_2.docx" download>Assignment 2</a></li>
+                <li style="color: grey;">Assignment 3 (Coming Soon)</li>
+                <li style="color: grey;">Assignment 4 (Coming Soon)</li>
+                <li style="color: grey;">Assignment 5 (Coming Soon) </li>
+
+              </ul>
+            </div>
+
+              <div class="subject-section">
+              <h4>Syllabus</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/COA/Syllabus/syllabus.pdf" download>Syllabus</a></li>
+              </ul>
+            </div>
+
+
+
           </div>
         </div>
 
@@ -272,6 +328,7 @@
           <h3 class="subject-header" onclick="toggleSubject('cd-subject')">Compiler Design <span
               class="subject-toggle">+</span></h3>
           <div class="subject-content" id="cd-subject">
+
             <div class="subject-section">
               <h4>All In One</h4>
               <ul class="download-links">
@@ -281,26 +338,33 @@
                     Design (All In One) (DOCX)</a></li>
               </ul>
             </div>
-          </div>
-        </div>
 
-        <div class="subject">
-          <h3 class="subject-header" onclick="toggleSubject('')">Unknown Subject <span class="subject-toggle">+</span>
-          </h3>
-          <div class="subject-content" id="cd-subject">
             <div class="subject-section">
-              <h4>All In One</h4>
+              <h4>Assignments</h4>
               <ul class="download-links">
-                <li><a href="docs/Sem 5/Compiler Design/All In One/Compiler Design (All In One).pdf" download>Unknown
-                    Subject</a></li>
-                <li><a href="docs/Sem 5/Compiler Design/All In One/Compiler Design (All In One).docx" download>Unknown
-                    Subject
-                  </a></li>
+                <li><a href="docs/Sem 5/Compiler Design/Assignments/Assignment_1.docx" download>Assignment 1</a></li>
+                <li><a href="docs/Sem 5/Compiler Design/Assignments/Assignment_2.docx" download>Assignment 2</a></li>
+                <li style="color: grey;">Assignment 3 (Coming Soon)</li>
+                <li style="color: grey;">Assignment 4 (Coming Soon)</li>
+                <li style="color: grey;">Assignment 5 (Coming Soon) </li>
+
               </ul>
             </div>
+
+
+              <div class="subject-section">
+              <h4>Syllabus</h4>
+              <ul class="download-links">
+                <li><a href="docs/Sem 5/Compiler Design/Syllabus/syllabus.docx" download>Syllabus (docx)</a></li>
+                <li><a href="docs/Sem 5/Compiler Design/Syllabus/syllabus.pdf" download>Syllabus (docx)</a></li>
+              </ul>
+            </div>
+
+
+
+
           </div>
         </div>
-
 
 
       </div>
