--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
               </ul>
             </div>
 
-              <div class="subject-section">
+            <div class="subject-section">
               <h4>Syllabus</h4>
               <ul class="download-links">
                 <li><a href="docs/Sem 5/COA/Syllabus/syllabus.pdf" download>Syllabus</a></li>
@@ -323,6 +323,8 @@
 
           </div>
         </div>
+
+
 
         <div class="subject">
           <h3 class="subject-header" onclick="toggleSubject('cd-subject')">Compiler Design <span
@@ -352,11 +354,11 @@
             </div>
 
 
-              <div class="subject-section">
+            <div class="subject-section">
               <h4>Syllabus</h4>
               <ul class="download-links">
                 <li><a href="docs/Sem 5/Compiler Design/Syllabus/syllabus.docx" download>Syllabus (docx)</a></li>
-                <li><a href="docs/Sem 5/Compiler Design/Syllabus/syllabus.pdf" download>Syllabus (docx)</a></li>
+                <li><a href="docs/Sem 5/Compiler Design/Syllabus/syllabus.pdf" download>Syllabus (pdf)</a></li>
               </ul>
             </div>
 
@@ -365,6 +367,44 @@
 
           </div>
         </div>
+
+
+
+        <div class="subject">
+          <h3 class="subject-header" onclick="toggleSubject('mlt-subject')">Machine Learning Algorithm and Techniques <span class="subject-toggle">+</span>
+          </h3>
+          <div class="subject-content" id="mlt-subject">
+            <div class="subject-section">
+              <h4>All In One</h4>
+              <ul class="download-links">
+                
+              </ul>
+            </div>
+
+            <div class="subject-section">
+              <h4>Assignments</h4>
+              <ul class="download-links">
+                <li style="color: grey;">Assignment 1 (Coming Soon)</li>
+                <li style="color: grey;">Assignment 2 (Coming Soon)</li>
+                <li style="color: grey;">Assignment 3 (Coming Soon)</li>
+                <li style="color: grey;">Assignment 4 (Coming Soon)</li>
+                <li style="color: grey;">Assignment 5 (Coming Soon) </li>
+
+              </ul>
+            </div>
+
+            <div class="subject-section">
+              <h4>Syllabus</h4>
+              <ul class="download-links">
+                <li style="color: grey;">Syllabus (Coming Soon) </li>
+              </ul>
+            </div>
+
+
+
+          </div>
+        </div>
+
 
 
       </div>
