--- a/index.html
+++ b/index.html
@@ -80,13 +80,21 @@
         Semester V <span class="toggle-icon">+</span>
       </h2>
 
+
+
+
       <div class="semester-content">
+
         <div class="subject">
           <h3 class="subject-header" onclick="toggleSubject('cn-subject')">
             Computer Networks <span class="subject-toggle">+</span>
           </h3>
 
+
+
           <div class="subject-content" id="cn-subject">
+
+
             <div class="subject-section">
               <h4>All In One</h4>
               <ul class="download-links">
@@ -101,8 +109,10 @@
               </ul>
             </div>
 
+            <hr>
+
             <div class="subject-section">
-              <h4>Assignments</h4>
+              <h4>Theory Assignments</h4>
               <ul class="download-links">
                 <li>
                   <a href="docs/Sem 5/Computer Networks/Assignments/Assignment 1.docx" download>Assignment 1</a>
@@ -117,7 +127,12 @@
                 <li style="color: grey">Assignment 5 (Coming Soon)</li>
 
 
-                <h4>Practical</h4>
+
+              </ul>
+
+
+              <h4>Practical Assignments</h4>
+              <ul class="download-links">
                 <li>
                   <a href="docs/Sem 5/Computer Networks/Assignments/Assignment 1 PR.docx" download>Assignment 1 (PR)</a>
                 </li>
@@ -127,8 +142,12 @@
                 <li style="color: grey">Assignment 3 (PR) (Coming Soon)</li>
                 <li style="color: grey">Assignment 4 (PR) (Coming Soon)</li>
                 <li style="color: grey">Assignment 5 (PR) (Coming Soon)</li>
+
               </ul>
+
             </div>
+
+            <hr>
 
             <div class="subject-section">
               <h4>Syllabus</h4>
@@ -146,6 +165,9 @@
 
           </div>
         </div>
+
+
+
 
         <div class="subject">
           <h3 class="subject-header" onclick="toggleSubject('dwm-subject')">
@@ -167,6 +189,8 @@
               </ul>
             </div>
 
+            <hr>
+
             <div class="subject-section">
               <h4>Assignments</h4>
               <ul class="download-links">
@@ -180,6 +204,8 @@
                 <li style="color: grey">Assignment 5 (Coming Soon)</li>
               </ul>
             </div>
+
+            <hr>
 
             <div class="subject-section">
               <h4>Syllabus</h4>
@@ -208,9 +234,9 @@
                 </li>
               </ul>
             </div>
-
+<hr>
             <div class="subject-section">
-              <h4>Assignments</h4>
+              <h4>Theory Assignments</h4>
               <ul class="download-links">
                 <li>
                   <a href="docs/Sem 5/Deep Learning/Assignments/Assignment_1.docx" download>Assignment 1</a>
@@ -233,7 +259,17 @@
                   <a href="docs/Sem 5/Deep Learning/Assignments/Assignment_5.docx" download>Assignment 5</a>
                 </li>
 
-                <h4>Practical</h4>
+
+
+
+
+              </ul>
+
+
+
+              <h4>Practical Assignments</h4>
+              <ul class="download-links">
+
                 <li style="color: grey">Assignment 1 (PR) (Coming Soon)</li>
                 <li style="color: grey">Assignment 2 (PR) (Coming Soon)</li>
 
@@ -248,26 +284,13 @@
                 <li>
                   <a href="docs/Sem 5/Deep Learning/Assignments/Assignment_5 PR.docx" download>Assignment 5 (PR)</a>
                 </li>
-
-
-
-
               </ul>
+
+
+
+
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<hr>
 
             <div class="subject-section">
               <h4>Syllabus</h4>
@@ -283,6 +306,7 @@
             </div>
 
 
+<hr>
 
 
 
@@ -296,28 +320,33 @@
 
               </ul>
             </div>
-
+<hr>
 
             <div class="subject-section">
               <h4>Question Bank</h4>
               <ul class="download-links">
                 <li>
-                  <a href="docs/Sem 5/Deep Learning/Question Bank/Unit 1 Question Bank.docx" download>Unit 1 - Foundations of Deep Learning</a>
+                  <a href="docs/Sem 5/Deep Learning/Question Bank/Unit 1 Question Bank.docx" download>Unit 1 -
+                    Foundations of Deep Learning</a>
                 </li>
                 <li>
-                  <a href="docs/Sem 5/Deep Learning/Question Bank/Unit 2 Question Bank.docx" download>Unit 2 - Introduction to Neural Networks</a>
+                  <a href="docs/Sem 5/Deep Learning/Question Bank/Unit 2 Question Bank.docx" download>Unit 2 -
+                    Introduction to Neural Networks</a>
                 </li>
 
-                 <li>
-                  <a href="docs/Sem 5/Deep Learning/Question Bank/Unit 3 Question Bank.docx" download>Unit 3 - Convolutional Neural Networks (CNNs)
-</a>
+                <li>
+                  <a href="docs/Sem 5/Deep Learning/Question Bank/Unit 3 Question Bank.docx" download>Unit 3 -
+                    Convolutional Neural Networks (CNNs)
+                  </a>
                 </li>
                 <li>
-                  <a href="docs/Sem 5/Deep Learning/Question Bank/Unit 4 Question Bank.docx" download>Unit 4 - Recurrent and Recursive Neural Networks</a>
+                  <a href="docs/Sem 5/Deep Learning/Question Bank/Unit 4 Question Bank.docx" download>Unit 4 - Recurrent
+                    and Recursive Neural Networks</a>
                 </li>
 
-                 <li>
-                  <a href="docs/Sem 5/Deep Learning/Question Bank/Unit 5 Question Bank.docx" download>Unit 5- Deep Generative Models & Reinforcement Learning</a>
+                <li>
+                  <a href="docs/Sem 5/Deep Learning/Question Bank/Unit 5 Question Bank.docx" download>Unit 5- Deep
+                    Generative Models & Reinforcement Learning</a>
                 </li>
 
               </ul>
@@ -337,6 +366,9 @@
             Linux Laboratory <span class="subject-toggle">+</span>
           </h3>
           <div class="subject-content" id="linux-subject">
+
+
+
             <div class="subject-section">
               <h4>All In One</h4>
               <ul class="download-links">
@@ -350,6 +382,12 @@
                 </li>
               </ul>
             </div>
+
+
+<hr>
+
+
+
 
             <div class="subject-section">
               <h4>Assignments</h4>
@@ -372,6 +410,8 @@
               </ul>
             </div>
 
+            <hr>
+
             <div class="subject-section">
               <h4>Syllabus</h4>
               <ul class="download-links">
@@ -380,6 +420,30 @@
                 </li>
               </ul>
             </div>
+
+            <hr>
+
+            <div class="subject-section">
+              <h4>Lab Manual</h4>
+              <ul class="download-links">
+                <li>
+                  <a href="docs/Sem 5/Linux Laboratory/Lab Manual/LabManual_1.docx" download>Linux Laboratory</a>
+                </li>
+
+              </ul>
+            </div>
+
+            <hr>
+
+            <div class="subject-section">
+              <h4>Question Bank</h4>
+              <ul class="download-links">
+                <li>
+                  <a href="docs/Sem 5/Linux Laboratory/Question Bank/Question Bank_All Units.pdf" download>All Units</a>
+                </li>
+              </ul>
+            </div>
+
           </div>
         </div>
 
@@ -396,6 +460,8 @@
               </ul>
             </div>
 
+<hr>
+
             <div class="subject-section">
               <h4>Assignments</h4>
               <ul class="download-links">
@@ -410,6 +476,8 @@
                 <li style="color: grey">Assignment 5 (Coming Soon)</li>
               </ul>
             </div>
+
+            <hr>
 
             <div class="subject-section">
               <h4>Syllabus</h4>
@@ -441,6 +509,8 @@
               </ul>
             </div>
 
+<hr>
+
             <div class="subject-section">
               <h4>Assignments</h4>
               <ul class="download-links">
@@ -455,6 +525,8 @@
                 <li style="color: grey">Assignment 5 (Coming Soon)</li>
               </ul>
             </div>
+
+            <hr>
 
             <div class="subject-section">
               <h4>Syllabus</h4>
