Minor issue fixed

--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
 
         <div class="subject">
           <h3 class="subject-header" onclick="toggleSubject('ddba-subject')">
-            <span>Desgin and Development of Blockchain Applications<span style="color: crimson; font-size: smaller; ">
+            <span>Design and Development of Blockchain Applications<span style="color: crimson; font-size: smaller; ">
                 (BCT Only)</span></span>
             <span class="subject-toggle">+</span>
           </h3>
