Added Sem III papers

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
                   <a href="docs/Sem 3/MST & EST Papers/MST/Discrete Mathematics/discrete_mathematics_mst_one.jpeg"
                     download>Discrete Mathematics</a>
                 </li>
+                <li>
+                  <a href="docs/Sem 3/MST & EST Papers/MST/OOPJ/oopj_mst_one.jpeg"
+                    download>Object Oriented Programming with Java</a>
+                </li>
+                <li>
+                  <a href="docs/Sem 3/MST & EST Papers/MST/RDBMS/rdbms_mst_one.jpeg"
+                    download>Relational Database Management Systems</a>
+                </li>
               </ul>
             </div>
           </div>
