--- a/index.html
+++ b/index.html
@@ -445,6 +445,15 @@
                       Learning</a
                     >
                   </li>
+
+                     <li>
+                    <a
+                      href="docs/Sem 5/Deep Learning/Question Bank/dl_question_bank_all_in_one.pdf"
+                      download
+                      >ALL IN ONE (Question Bank)</a
+                    >
+                  </li>
+
                 </ul>
               </div>
             </div>
