--- a/index.html
+++ b/index.html
@@ -569,6 +569,15 @@
                       >All Units</a
                     >
                   </li>
+
+                   <li>
+                    <a
+                      href="docs/Sem 5/Linux Laboratory/Question Bank/Question Bank_All Units.pdf"
+                      download
+                      >ALL IN ONE (Question Bank)</a
+                    >
+                  </li>
+
                 </ul>
               </div>
             </div>
