--- a/index.html
+++ b/index.html
@@ -489,6 +489,16 @@
               <div class="subject-section">
                 <h4>Assignments</h4>
                 <ul class="download-links">
+
+                   <li>
+                    <a
+                      href="docs/Sem 5/Linux Laboratory/Assignments/linux_lab_all_assignments.docx"
+                      download
+                      >ALL IN ONE</a
+                    >
+                  </li>
+
+
                   <li>
                     <a
                       href="docs/Sem 5/Linux Laboratory/Assignments/Assignment_1.docx"
@@ -570,14 +580,7 @@
                     >
                   </li>
 
-                   <li>
-                    <a
-                      href="docs/Sem 5/Linux Laboratory/Question Bank/Question Bank_All Units.pdf"
-                      download
-                      >ALL IN ONE (Question Bank)</a
-                    >
-                  </li>
-
+                  
                 </ul>
               </div>
             </div>
