--- a/index.html
+++ b/index.html
@@ -842,6 +842,15 @@
               <div class="subject-section">
                 <h4>Assignments</h4>
                 <ul class="download-links">
+
+                    <li>
+                    <a
+                      href="docs/Sem 5/Compiler Design/Assignments/All In One.pdf"
+                      download
+                      >All In One</a
+                    >
+                  </li>
+
                   <li>
                     <a
                       href="docs/Sem 5/Compiler Design/Assignments/Assignment_1.docx"
@@ -856,9 +865,31 @@
                       >Assignment 2</a
                     >
                   </li>
-                  <li style="color: grey">Assignment 3 (Coming Soon)</li>
-                  <li style="color: grey">Assignment 4 (Coming Soon)</li>
-                  <li style="color: grey">Assignment 5 (Coming Soon)</li>
+
+                  <li>
+                    <a
+                      href="docs/Sem 5/Compiler Design/Assignments/Assignment_3.docx"
+                      download
+                      >Assignment 3</a
+                    >
+                  </li>
+
+                  <li>
+                    <a
+                      href="docs/Sem 5/Compiler Design/Assignments/Assignment_4.docx"
+                      download
+                      >Assignment 4</a
+                    >
+                  </li>
+
+                  <li>
+                    <a
+                      href="docs/Sem 5/Compiler Design/Assignments/Assignment_5.docx"
+                      download
+                      >Assignment 5</a
+                    >
+                  </li>
+                
                 </ul>
               </div>
 
